Configure dynamic CORS and prepared API URL for production